# AIGenTermux

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: android.yml
api/: index.py
src/aigentermux/: admin.py  config.py  main.py
src/aigentermux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
